--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,52 +1,18 @@
-- name: Setup Node.js environment
-  uses: actions/setup-node@v2.4.0
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+# NOTE: pnpm caching support requires pnpm version >= 6.10.0
+
+steps:
+- uses: actions/checkout@v2
+- uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2
   with:
-    # Set always-auth in npmrc
-    always-auth: # optional, default is false
-    # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
-    node-version: # optional
-    # Target architecture for Node to use. Examples: x86, x64. Will use system architecture by default.
-    architecture: # optional
-    # Set this option if you want the action to check for the latest available version that satisfies the version spec
-    check-latest: # optional
-    # Optional registry to set up for auth. Will set the registry in a project level .npmrc and .yarnrc file, and set up auth to read in from env.NODE_AUTH_TOKEN
-    registry-url: # optional
-    # Optional scope for authenticating against scoped registries
-    scope: # optional
-    # Used to pull node distributions from node-versions.  Since there's a default, this is typically not supplied by the user.
-    token: # optional, default is ${{ github.token }}
-    # Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm
-    cache: # optional
-    # Used to specify the path to a dependency file: package-lock.json, yarn.lock, etc. Supports wildcards or a list of file names for caching multiple dependencies.
-    cache-dependency-path: # optional
-    # Deprecated. Use node-version instead. Will not be supported after October 1, 2019
-    version: # optional
-
-name: NodeJS with Webpack
-
-on:
-  push:
-    branches: [ wromo/wromoy-css/ ]
-  pull_request:
-    branches: [ wromo/wromoy-css/ ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-    
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Build
-      run: |
-        npm install
-        npx webpack
+    version: 6.10.0
+- uses: actions/setup-node@v2
+  with:
+    node-version: '14'
+    cache: 'pnpm'
+- run: pnpm install
+- run: pnpm test
